--- a/public/material/css/material-dashboard.css
+++ b/public/material/css/material-dashboard.css
@@ -1,7 +1,7 @@
 /*!
 
  =========================================================
- * HMA Project Dashboard Pro - v2.1.0
+ * Compra Maquinaria Pro - v2.1.0
  =========================================================
 
  * Product Page: https://www.creative-tim.com/product/material-dashboard-pro-laravel
